--- a/src/Views/homepage.twig
+++ b/src/Views/homepage.twig
@@ -1,9 +1,6 @@
-<html>
-<head></head>
-<body>
-<h1>page d'accueil</h1>
+{% extends 'Template/layout.twig' %}
 
-
+  {% block content %}
    {% for article in articles %}
 
                     <h3><a href="ArticlesController/read/{{article.id}}"> {{article.title}} </a></h3>
@@ -12,11 +9,5 @@
                     <p> ------------------------------------- </p>
 
     {% endfor %} 
-
-
-
-
-</body>
-
-
-</html>
+  
+  {% endblock content %}
