--- a/src/Views/Template/layout.twig
+++ b/src/Views/Template/layout.twig
@@ -21,7 +21,7 @@
       </button>
       <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
           <div class="navbar-nav mr-auto">
-          <p id="devmo">On Blog le sport !!!!!</p>
+          <p id="devmo">BLOG - Les meilleures séries US</p>
           </div>
         <div class="navbar-nav ml-auto">
           <a class="nav-item nav-link active" href="?p=home">Accueil <span class="sr-only">(current)</span></a>
@@ -49,6 +49,23 @@
     </section>
     <br />
     <div class="container">
+
+    <div id="headerwrap">
+    <div class="container">
+      <div class="row centered">
+        <div class="col-lg-8 col-lg-offset-2">
+          <h2><b></b></h2>
+        </div>
+      </div>
+      <!-- row -->
+    </div>
+    <!-- container -->
+  </div>
+  <!-- headerwrap -->
+    
+
+
+
       {% block content %}{% endblock content %}
     </div>
     <div container-fluid>
