home.twig : Update accueil

--- a/src/Views/Template/layout.twig
+++ b/src/Views/Template/layout.twig
@@ -68,8 +68,13 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
     </div>
   </section>
-  
-
+  </section>
+    <section class="py-5">
+    <div class="container">
+      {# <h1>Liste des derniers posts</h1> #}
+      {% block content2 %} {% endblock %}
+      </div>
+  </section>
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
