--- a/src/Views/Template/footer.twig
+++ b/src/Views/Template/footer.twig
@@ -1,6 +1,7 @@
-<footer class="blog-footer">
-  <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-  <p>
-    <a href="#">Back to top</a>
-  </p>
+<!-- Footer -->
+<footer class="py-5 bg-dark">
+	<div class="container">
+		<p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+	</div>
+	<!-- /.container -->
 </footer>
