--- a/src/Views/Template/navbar.twig
+++ b/src/Views/Template/navbar.twig
@@ -1,4 +1,4 @@
- <base href="/mc/">
+ <base href="/projet-5/">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
     
@@ -26,6 +26,10 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Follow me</a>
+          </li>
+          <li class="nav-item">
+            {# <a class="nav-link" href="src/Views/article_edit.twig">Admin</a> #}
+            <a class="nav-link" href="admin/edit/">Admin</a>
           </li>
           <a class="nav-item nav-link" href=""></a>
           <a  href="" type="button" class="btn btn-outline-secondary">S'inscrire</a>
