--- a/src/Views/article.twig
+++ b/src/Views/article.twig
@@ -1,13 +1,29 @@
 {% extends 'Template/layout.twig' %}
 
 {% block content %}
-
 <h1>{{ article.title }} </h1>
 <p>Créé par Administateur - le {{ article.date_creation|date("d/m/Y h\\h i\\m s\\s")}}</p>
 </br>
 <div><img class="circle" src="{{ article.url_images }}" class="card-img-top" alt="..." ></div>
 <p class="jmi"> {{ article.content  }}</p>
-                    
-          
+{% endblock %}
+
+
+{% block content2 %}
+
+<h1>Qu'en pensez vous : {{ article.title }} </h1>
+<h4>Saississez votre commentaire !!! </h4>
+<br />
+<form>
+  <div class="form-group">
+    <label for="pseudo">pseudo</label>
+    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+  </div>
+  <div class="form-group">
+    <label for="message">message</label>
+    <input type="textarea" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 
 {% endblock %}
