--- a/src/Views/article.twig
+++ b/src/Views/article.twig
@@ -14,16 +14,12 @@
 <h1>Qu'en pensez vous : {{ article.title }} </h1>
 <h4>Saississez votre commentaire !!! </h4>
 <br />
-<form>
-  <div class="form-group">
-    <label for="pseudo">pseudo</label>
-    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
-  </div>
-  <div class="form-group">
-    <label for="message">message</label>
-    <input type="textarea" class="form-control" id="formGroupExampleInput" placeholder="Example input">
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <form method="post" action="comment/edit/" class="text-center border border-light p-5">
+
+  <p><input type="hidden"  name="id"         value="{{ article.id }}"></p>
+  <p><input type="text"    name="pseudo"      value="{{ article.pseudo }}" id="defaultContactFormName" class="form-control mb-4" placeholder="pseudo" required></p>
+  <p><textarea             name="content"    value "{{ article.content }}" id="exampleFormControlTextarea2" class="form-control rounded-0"  rows="3" placeholder="Description" required></textarea></p>
+  <p><input type="submit"  value="editer"></p>
 </form>
 
 {% endblock %}
