--- a/src/Views/Article_edit.twig
+++ b/src/Views/Article_edit.twig
@@ -9,10 +9,10 @@
   <p class="h4 mb-4">gestion de l'article</p>
 
    <p><input type="hidden"  name="id"         value="{{ article.id }}"></p>
-   <p><input type="text"    name="title"      value="{{ article.title }}" id="defaultContactFormName" class="form-control mb-4" placeholder="Titre"></p>
-   <p><input type="text"    name="slug"       value="{{ article.slug }}" id="defaultContactFormName" class="form-control mb-4" placeholder="Slug"></p>
-   <p><textarea             name="content"    value "{{ article.content }}" id="exampleFormControlTextarea2" class="form-control rounded-0"  rows="3" placeholder="Description"></textarea></p> 
-   <p><input type="text"    name="url_images" value="{{ article.url_images }}" id="defaultContactFormName" class="form-control mb-4" placeholder="copier l'url de l'image"></p>
+   <p><input type="text"    name="title"      value="{{ article.title }}" id="defaultContactFormName" class="form-control mb-4" placeholder="Titre" required></p>
+   <p><input type="text"    name="slug"       value="{{ article.slug }}" id="defaultContactFormName" class="form-control mb-4" placeholder="Slug" required></p>
+   <p><textarea             name="content"    value "{{ article.content }}" id="exampleFormControlTextarea2" class="form-control rounded-0"  rows="3" placeholder="Description" required></textarea></p> 
+   <p><input type="text"    name="url_images" value="{{ article.url_images }}" id="defaultContactFormName" class="form-control mb-4" placeholder="copier l'url de l'image" required></p>
    <p><input type="submit"  value="editer"></p>
 
 </form>
