modif delete --> ok

--- a/src/Views/Article_delete.twig
+++ b/src/Views/Article_delete.twig
@@ -2,8 +2,7 @@
 
 {% block content %}
 
-<br />
+<p>L'article : {{ one.title }} a bien été supprimé</p>
 
-<p>L'article : {{ article.title }} a bien été supprimé</p>
 {% endblock content %}
 
