--- a/src/Views/admin_post.twig
+++ b/src/Views/admin_post.twig
@@ -29,7 +29,7 @@
 				<td>
 					{# <a href="admin/erase/{{article.id}}"> #}
 					<a href="articles/erase/{{article.id}}">
-					{# <a href="articles/delete/{{article.id}}">  ok #}
+					{# <a href="articles/delete/{{article.id}}">  #}
 						<button type="button" class="btn btn-danger">supprimer</button>
 					</td>
     </tr>
