ajust modif delete

--- a/src/Views/admin_post.twig
+++ b/src/Views/admin_post.twig
@@ -27,9 +27,7 @@
 							<button type="button" class="btn btn-warning">modifier</button>
 						</td>
 				<td>
-					{# <a href="admin/erase/{{article.id}}"> #}
-					<a href="articles/erase/{{article.id}}">
-					{# <a href="articles/delete/{{article.id}}">  #}
+					<a href="articles/delete/{{article.id}}"> 
 						<button type="button" class="btn btn-danger">supprimer</button>
 					</td>
     </tr>
