--- a/src/Views/Template/footer.twig
+++ b/src/Views/Template/footer.twig
@@ -1,7 +1,71 @@
 <!-- Footer -->
-<footer class="py-5 bg-dark">
-	<div class="container">
-		<p class="m-0 text-center text-white">Projet n°5 - JL chez Openclassroom</p>
-	</div>
-	<!-- /.container -->
-</footer>
+<footer class="page-footer font-small alert-dark pt-4">
+
+    <!-- Footer Links -->
+    <div class="container-fluid text-center text-md-left">
+
+        <!-- Grid row -->
+        <div class="row">
+
+            <!-- Grid column -->
+            <div class="col-md-6 mt-md-0 mt-3">
+
+                <!-- Content -->
+                <h5 class="font-weight-bold">Le Blog ....</h5>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+
+            </div>
+            <!-- Grid column -->
+
+            <hr class="clearfix w-100 d-md-none pb-3">
+
+            <!-- Grid column -->
+            <div class="col-md-3 mb-md-0 mb-3">
+
+                <!-- Links -->
+                <h5 class="font-weight-bold">Site</h5>
+
+                <ul class="list-unstyled">
+                    <li>
+                        <a href="#!">Accueil</a>
+                    </li>
+                    <li>
+                        <a href="#!">Tous les posts</a>
+                    </li>
+                    <li>
+                        <a href="#!">Mon CV</a>
+                    </li>
+                    <li>
+                        <a href="#!">Me contacter</a>
+                    </li>
+                </ul>
+
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-3 mb-md-0 mb-3">
+
+                <!-- Links -->
+                <h5 class="font-weight-bold">Follow me</h5>
+
+                <ul class="list-unstyled">
+                    <li>
+                        <a href="#!">Linkedin</a>
+                    </li>
+                    <li>
+                        <a href="#!">Twiter</a>
+                    </li>
+                    <li>
+                        <a href="#!">Github</a>
+                    </li>
+                </ul>
+
+            </div>
+            <!-- Grid column -->
+
+        </div>
+        <!-- Grid row -->
+
+    </div>
+    <!-- Footer Links -->
