--- a/src/Views/admin_post.twig
+++ b/src/Views/admin_post.twig
@@ -25,11 +25,11 @@
        <td>
 					<a href="articles/update/{{article.id}}">
 							<button type="button" class="btn btn-warning">modifier</button>
-						</td>
+				</td>
 				<td>
 					<a href="articles/delete/{{article.id}}"> 
-						<button type="button" class="btn btn-danger">supprimer</button>
-					</td>
+						<button  type="button" class="btn btn-danger"><div class="top">supprimer<i></i></div></button>
+				</td> 
     </tr>
    {% endfor%}
 </table>
