--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -79,8 +79,6 @@ text-align: justify;
   box-sizing: border-box;
   border-radius: 10px;
   box-shadow: 0 10px 50px rgba(0,0,0,.2);
-
-
 }
 
 .circle{
@@ -92,4 +90,49 @@ text-align: justify;
   float: left;
   shape-outside: circle();
   margin: 20px;
+}
+
+#block{
+padding-top: 56px;
+}
+
+/* footer */
+
+.social-icon {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.social-icon li{
+  display: inline-block;
+  text-align: center;
+}
+
+.social-icon a {
+  display: block;
+  width: 44px;
+  height: 44px;
+  line-height: 44px;
+  border-radius: 50%;
+  margin-right: 5px;
+}
+
+.social-icon a {
+  background: rgba(255, 255, 255, 0.85); /* social icon background color */
+  color: #000; /* social icon color */
+}
+
+.social-icon a:hover {
+  background: rgba(255, 255, 255, 0.25); /* social icon hover background color */
+  color: #fff; /* social icon hover color */
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  padding-top: 5px;
+  width: 100%;
+  height: 60px;
+  background-color: #000;
 }
