--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -68,6 +68,10 @@ text-align: justify;
   width: 200px;
   height: 200px;
 }
+#img_blog_admin {
+  width: 50px;
+  height: 50px;
+}
 
 .flux{
   color: blueviolet;
