--- a/src/Views/Template/footer.twig
+++ b/src/Views/Template/footer.twig
@@ -1,71 +1,53 @@
+
+
+
 <!-- Footer -->
-<footer class="page-footer font-small alert-dark pt-4">
+<footer class="page-footer font-small blue-grey lighten-5">
 
-    <!-- Footer Links -->
-    <div class="container-fluid text-center text-md-left">
+  <div style="background-color: #21d192;">
+    <div class="container">
 
-        <!-- Grid row -->
-        <div class="row">
+      <!-- Grid row-->
+      <div class="row py-4 d-flex align-items-center">
 
-            <!-- Grid column -->
-            <div class="col-md-6 mt-md-0 mt-3">
+        <!-- Grid column -->
+        <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+          <h6 class="mb-0">@copyright Jlavidange - Openclassrooms - Projet 5</h6>
+        </div>
+        <!-- Grid column -->
 
-                <!-- Content -->
-                <h5 class="font-weight-bold">Le Blog ....</h5>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        <!-- Grid column -->
+        <div class="col-md-6 col-lg-7 text-center text-md-right">
 
-            </div>
-            <!-- Grid column -->
-
-            <hr class="clearfix w-100 d-md-none pb-3">
-
-            <!-- Grid column -->
-            <div class="col-md-3 mb-md-0 mb-3">
-
-                <!-- Links -->
-                <h5 class="font-weight-bold">Site</h5>
-
-                <ul class="list-unstyled">
-                    <li>
-                        <a href="#!">Accueil</a>
-                    </li>
-                    <li>
-                        <a href="#!">Tous les posts</a>
-                    </li>
-                    <li>
-                        <a href="#!">Mon CV</a>
-                    </li>
-                    <li>
-                        <a href="#!">Me contacter</a>
-                    </li>
-                </ul>
-
-            </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class="col-md-3 mb-md-0 mb-3">
-
-                <!-- Links -->
-                <h5 class="font-weight-bold">Follow me</h5>
-
-                <ul class="list-unstyled">
-                    <li>
-                        <a href="#!">Linkedin</a>
-                    </li>
-                    <li>
-                        <a href="#!">Twiter</a>
-                    </li>
-                    <li>
-                        <a href="#!">Github</a>
-                    </li>
-                </ul>
-
-            </div>
-            <!-- Grid column -->
+          <!-- Facebook -->
+          <a class="fb-ic">
+            <i class="fab fa-facebook-f white-text mr-4"></i>
+          </a>
+          <!-- Twitter -->
+          <a class="tw-ic">
+            <i class="fab fa-twitter white-text mr-4"> Twitter</i>
+          </a>
+          <!-- Google +-->
+          <a class="gplus-ic">
+            <i class="fab fa-google-plus-g white-text mr-4"> </i>
+          </a>
+          <!--Linkedin -->
+          <a class="li-ic">
+            <i class="fab fa-linkedin-in white-text mr-4">Linkedin </i>
+          </a>
+          <!--Instagram-->
+          <a class="ins-ic">
+            <i class="fab fa-instagram white-text"> </i>
+          </a>
 
         </div>
-        <!-- Grid row -->
+        <!-- Grid column -->
+
+      </div>
+      <!-- Grid row-->
 
     </div>
-    <!-- Footer Links -->
+  </div>
+
+</footer>
+<!-- Footer -->
