--- a/src/Views/Article_delete.twig
+++ b/src/Views/Article_delete.twig
@@ -1,9 +1,9 @@
 {% extends 'Template/layout.twig' %}
 
 {% block content %}
-<div id="block">
+<div id="block" class="jmi">
     <div class="jumbotron">
-    <h1 class="display-5">L'article n° {{ one.id }}  a bien été supprimé</h1>
+    <h1 class="display-5">L'article n° {{ one.title }}  a bien été supprimé</h1>
     <br />
     <p class="lead">
         <a class="btn btn-primary btn-lg" href="admin/edit/" role="button">fermer</a>
