--- a/src/Views/article.twig
+++ b/src/Views/article.twig
@@ -11,7 +11,7 @@
 {% block form %}
 <h2>{{ article.title }} - {{ article.id }}</h2>
 <h3>Vos commentaires ci-dessous :</h3>
-  <form method="post" action="comments/edit_com/" class="text-center border border-light p-5">
+  <form method="post" action="articles/read/{{ article.id }}" class="text-center border border-light p-5">
   <p><input type="hidden"  name="id"        value=""></p>
   <p><input type="hidden"  name="posts_id"  value="{{ article.id }}"  id="defaultContactFormName" class="form-control mb-4"></p>
   <p><input type="text"    name="user_id"   value=""  id="defaultContactFormName"                 class="form-control mb-4" placeholder="mettre 0 pour l'instant"></p>
