--- a/src/Views/Template/footer.twig
+++ b/src/Views/Template/footer.twig
@@ -1,5 +1,16 @@
-
-
+            
+						<!-- Bootstrap core JavaScript -->
+						<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+						<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/popper.min.js"></script>
+						<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.7/js/tether.min.js"></script>
+						<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+					
+          <!-- JavaScript -->
+						<script>
+							$(function () {
+								$('[data-toggle="tooltip"]').tooltip()
+								})
+						</script>
 
 <!-- Footer -->
 <footer class="page-footer font-small blue-grey lighten-5">
