--- a/src/Views/Template/footer.twig
+++ b/src/Views/Template/footer.twig
@@ -13,52 +13,21 @@
 						</script>
 
 <!-- Footer -->
-<footer class="page-footer font-small blue-grey lighten-5">
+<div class="container-fluid">
+  <div class="row">
+    <div class="col">
+      <p class="text-center lead">@copyright - J.Lavidange  - 
+        <a href="admin/edit/"> Allez sur Admin</a>
+      </p>
+    </div>
 
-  <div style="background-color: #21d192;">
-    <div class="container">
-
-      <!-- Grid row-->
-      <div class="row py-4 d-flex align-items-center">
-
-        <!-- Grid column -->
-        <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-          <h6 class="mb-0">@copyright Jlavidange - Openclassrooms - Projet 5</h6>
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-6 col-lg-7 text-center text-md-right">
-
-          <!-- Facebook -->
-          <a class="fb-ic">
-            <i class="fab fa-facebook-f white-text mr-4"></i>
-          </a>
-          <!-- Twitter -->
-          <a class="tw-ic">
-            <i class="fab fa-twitter white-text mr-4"> Twitter</i>
-          </a>
-          <!-- Google +-->
-          <a class="gplus-ic">
-            <i class="fab fa-google-plus-g white-text mr-4"> </i>
-          </a>
-          <!--Linkedin -->
-          <a class="li-ic">
-            <i class="fab fa-linkedin-in white-text mr-4">Linkedin </i>
-          </a>
-          <!--Instagram-->
-          <a class="ins-ic">
-            <i class="fab fa-instagram white-text"> </i>
-          </a>
-
-        </div>
-        <!-- Grid column -->
-
-      </div>
-      <!-- Grid row-->
-
+  </div>
+  <div class="row" id="footer-jmi">
+    <div class="col text-center">
+      <a href="https://www.linkedin.com/in/jimmy-lavidange-donne" target="_blank"><button type="button" class="btn btn-primary btn-sm">Linkedin</button></a>
+      <a href="https://github.com/donjmi" target="_blank"><button type="button" class="btn btn-primary btn-sm">Github</button></a>
+      <a href="https://twitter.com/jldonne" target="_blank"><button type="button" class="btn btn-primary btn-sm">Twitter</button></a>
     </div>
   </div>
-
-</footer>
+</div>
 <!-- Footer -->
