--- a/src/Views/Template/navbar.twig
+++ b/src/Views/Template/navbar.twig
@@ -22,14 +22,7 @@
             <a class="nav-link" href="#">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Mon CV</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Follow me</a>
-          </li>
-          <li class="nav-item">
-            {# <a class="nav-link" href="src/Views/article_edit.twig">Admin</a> #}
-            <a class="nav-link" href="admin/edit/">Admin</a>
+            <a class="nav-link" href="public/images/CV.pdf" target="_blank">Mon CV</a>
           </li>
           <a class="nav-item nav-link" href=""></a>
           <a  href="" type="button" class="btn btn-outline-secondary">S'inscrire</a>
