--- a/src/Views/admin_post.twig
+++ b/src/Views/admin_post.twig
@@ -30,7 +30,7 @@
 				</td>
 				<td>
 					<a href="articles/delete/{{article.id}}"> 
-						<button  type="button" class="btn btn-danger"><div class="top">supprimer<i></i></div></button>
+						<button  type="button" class="btn btn-danger" ><div class="top" ><span id="tool" data-toggle="tooltip" data-placement="bottom" title="Supp. définitive">supprimer</span><i></i></div></button>
 				</td> 
     </tr>
    {% endfor%}
