Home update code + link all articles

--- a/src/Views/admin_post.twig
+++ b/src/Views/admin_post.twig
@@ -1,6 +1,6 @@
 {% extends 'Template/layout.twig' %}
 
-{% block content2 %}
+{% block content %}
 <h1> Liste des posts - Admin </h1>
 <br />
 <table class="table">
@@ -50,5 +50,5 @@
    <p><input type="submit"  value="envoyer"></p>
 
 </form>
-{% endblock content2 %}
+{% endblock content %}
 
