--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -5,6 +5,14 @@
  */
  body {
   padding-top: 56px;
+  background-color:#eaedf1;
+
+
+  /* background-color: #ffffff; */
+}
+
+.title-post{
+  text-shadow: 2px 2px 7px #000000;
 }
 
 .bg-image-full {
@@ -25,7 +33,8 @@ padding-left: 0px;
   /* background: url(../img/header-bg.jpg) no-repeat center top; */
   margin-top: 50px;
   padding-top: 0px;
-  background-attachment: relative;
+  /* background-attachment: relative; */
+  background-attachment: fixed; 
   background-position: center center;
   min-height: 500px;
   width: 100%;
@@ -45,8 +54,16 @@ padding-left: 0px;
   font-size: 70px;
   font-weight: 500;
   letter-spacing: 2px;
-  text-transform: uppercase; 
+  text-transform: uppercase;
   
+}
+.presentation{
+  background: url(https://images.unsplash.com/photo-1512070853659-f08f0efae470?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjF9&auto=format&fit=crop&w=600&q=60) no-repeat center center;
+  background-size: cover;
+}
+
+.hero-unit{
+  color: white;
 }
 
 @media (max-width: 768px ) {
@@ -63,6 +80,9 @@ p{
 text-align: justify;
 }
 
+h1.title-post{
+  text-align: center;
+}
 
 #img_blog {
   width: 200px;
@@ -76,7 +96,10 @@ text-align: justify;
 .flux{
   color: blueviolet;
 }
-
+ul.list-group{
+  margin-bottom: 35px;
+  font-size: smaller;
+}
 
 .jmi{
   padding: 30px;
@@ -96,15 +119,57 @@ text-align: justify;
   margin: 20px;
 }
 
+.kek{
+  text-shadow:0 1px 0 #ccc, 
+  0 2px 0 #c9c9c9,
+  0 3px 0 #bbb,
+  0 4px 0 #b9b9b9,
+  0 5px 0 #aaa,
+  0 6px 1px rgba(0,0,0,.1),
+  0 0 5px rgba(0,0,0,.1),
+  0 1px 3px rgba(0,0,0,.3),
+  0 3px 5px rgba(0,0,0,.2),
+  0 5px 10px rgba(0,0,0,.25),
+  0 10px 10px rgba(0,0,0,.2),
+  0 20px 20px rgba(0,0,0,.15);color:#fff;
+  background-color:#2E8ECE;
+  margin-top: 10px;
+  font-size: 18px;
+}
+
 #block{
 padding-top: 56px;
 }
 
 /* footer */
 #footer-jmi{
-  
   font-family:georgia, serif;
   margin-bottom:10px;
   font-size : 15px;
   color : white;
+}
+
+.lead{
+  font-weight: bold;
+}
+
+tbody{
+text-align:left; font-size: 14px; color: #000000;
+}
+
+.test{
+  background-color :white;
+  /* background: url(https://images.unsplash.com/photo-1572188863110-46d457c9234d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60); */
+}
+.content{
+  background-color :white;
+  /* background: url(https://images.unsplash.com/photo-1572188863110-46d457c9234d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60); */
+}
+
+.marvin{
+  padding-top: 30px;
+  background-color: rgba(245, 230, 230, 0.71);
+}
+.comment{
+  margin-bottom: -30px
 }
