Init Users  : create (MVC) + sign in

--- a/src/Views/Template/navbar.twig
+++ b/src/Views/Template/navbar.twig
@@ -25,7 +25,7 @@
             <a class="nav-link" href="public/images/CV.pdf" target="_blank">Mon CV</a>
           </li>
           <a class="nav-item nav-link" href=""></a>
-          <a  href="" type="button" class="btn btn-outline-secondary">S'inscrire</a>
+          <a  href="users/editUsers/" type="button" class="btn btn-outline-secondary">S'inscrire</a>
           <a class="nav-item nav-link" href=""></a>
           <a  href="" type="button" class="btn btn-success">Se connecter</a>
         </ul>
