Users : add CRUD

--- a/src/Views/Template/navbar.twig
+++ b/src/Views/Template/navbar.twig
@@ -24,6 +24,9 @@
           <li class="nav-item">
             <a class="nav-link" href="public/images/CV.pdf" target="_blank">Mon CV</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="users/editUsers/">users</a>
+          </li>
           <a class="nav-item nav-link" href=""></a>
           <a  href="users/editUsers/" type="button" class="btn btn-outline-secondary">S'inscrire</a>
           <a class="nav-item nav-link" href=""></a>
