--- a/src/Views/User_delete.twig
+++ b/src/Views/User_delete.twig
@@ -3,10 +3,10 @@
 {% block content %}
 <div id="block" class="jmi">
     <div class="jumbotron">
-    <h1 class="display-5">L'utilisateur n° {{ one.pseudo }}  a bien été supprimé</h1>
+    <h1 class="display-5">L'utilisateur {{ one.pseudo }}  a bien été supprimé</h1>
     <br />
     <p class="lead">
-        <a class="btn btn-primary btn-lg" href="users/editUsers/" role="button">fermer</a>
+        <a class="btn btn-primary btn-lg" href="users/createUsers/" role="button">fermer</a>
     </p>
     </div>
 </div>
