--- a/src/Views/admin_users.twig
+++ b/src/Views/admin_users.twig
@@ -1,4 +1,4 @@
-{% extends 'Template/layout-article.twig' %}
+{% extends 'Template/layout-admin.twig' %}
 
 {% block content %}
 <h1> Liste des utilisateurs </h1>
@@ -24,7 +24,7 @@
        <td>{{ user.role }}</td>
        <td>
 					<a href="users/update/{{user.id}}">
-							<button type="button" class="btn btn-warning">modifier</button>
+						<button type="button" class="btn btn-warning">modifier</button>
 				</td>
 				<td>
 					<a href="users/delete/{{user.id}}"> 
@@ -33,19 +33,10 @@
     </tr>
    {% endfor%}
 </table>
-<br />-----------------------------------------------------------------------
-<br />
 
-<form method="post" action="users/editUsers/" class="text-center border border-light p-5">
-  <p class="h4 mb-4">Ajouter un nouvel utilisateur</p>
+<p class="h4 mb-4">Ajouter un nouvel utilisateur</p>
 
-   <p><input type="hidden"    name="id"         value=""></p>
-   <p><input type="text"      name="pseudo"     value="" id="defaultContactFormName" class="form-control mb-4" placeholder="pseudo" required></p>
-   <p><input type="email"     name="email"      value="" id="defaultContactFormName" class="form-control mb-4" placeholder="email@email.fr" required></p>
-   <p><input type="password"  name="password"   value="" id="defaultContactFormName" class="form-control mb-4" placeholder="mot de passe" required></p>
-   <p><input type="text"      name="role"       value="" id="defaultContactFormName" class="form-control mb-4" placeholder="1: admin 0: user " required></p>
-   <p><input type="submit"  value="envoyer"></p>
+{% include 'User_edit.twig'  with {'form': addUsers, 'errors': errors, 'action': action } %}
 
-</form>
 {% endblock content %}
 
